--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    font: 25px "Century Gothic", Futura, sans-serif;
+    margin: 20px;
+   background-color: lightyellow;
+  }
+  
+  ol, ul {
+    padding-left: 30px;
+  }
+  
+  .board-row:after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+  
+  .status {
+    margin-bottom: 10px;
+  }
+  
+  .square {
+    background: slateblue;
+    border: 3px solid yellow;
+    border-radius: 20px;
+    float: left;
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 34px;
+    padding: 0;
+    text-align: center;
+    width: 150px;
+    height: 150px;
+    color: yellow ;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  .square:hover{
+    background-color: yellow;
+    color: slateblue;
+    border: 3px solid black;
+
+  }
+
+  .square:focus{
+    color: purple;
+    border: 3px solid yellow;
+    
+  }
+  
+  .square:focus {
+    outline: none;
+  }
+  
+  .kbd-navigation .square:focus {
+    background: #ddd;
+  }
+  
+  .game {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+  }
+  
+  .game-info {
+    margin-left: 20px;
+  }
+
+  .next-button{
+    width: 180px;
+    height: 30px;
+    color: slateblue;
+    border-radius: 20px;
+    font-size: 18px;
+  }
+
+  .next-button:hover{
+    background-color:slateblue;
+    color: yellow;
+  }
+
+  .header{
+    color: slateblue;
+    text-align: center;
+    margin-bottom: 10px;
+  }
